Recompiled without extra health

--- a/.github/workflows/daily-team-status.lock.yml
+++ b/.github/workflows/daily-team-status.lock.yml
@@ -1793,7 +1793,7 @@ jobs:
           retry_count=0
           gateway_url="http://localhost:8000/health"
           while [ $retry_count -lt $max_retries ]; do
-            if curl -s -o /dev/null -w "%{http_code}" "${gateway_url}/health" | grep -q "200\|204"; then
+            if curl -s -o /dev/null -w "%{http_code}" "${gateway_url}" | grep -q "200\|204"; then
               echo "MCP Gateway is ready!"
               exit 0
             fi
